# horstenhomes

./: .env.dev  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.dev  Getting Started  README.md  pyproject.toml
apps/accounts/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
apps/activity/: admin.py  apps.py  models.py  services.py
apps/addresses/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/audits/: admin.py  admin_mixins.py  apps.py  auth_signals.py  middleware.py  model_audit.py  models.py  services.py  urls.py  utils.py  views.py
apps/branding/: apps.py  context_processors.py  forms.py  forms_theme.py  models.py  urls.py  views.py
apps/contacts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/core/: forms.py  middleware.py  mixins.py  models.py
apps/documents/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/entitlements/: admin.py  apps.py  middleware.py  models.py  services.py
apps/leases/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/logs/: __init__.py  admin.py  apps.py  handlers.py  metrics.py  middleware.py  models.py  perf.py  tasks.py  urls.py  views.py
apps/marketing/: apps.py  urls.py  views.py
apps/onboarding/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
apps/platform/: apps.py  services.py  urls.py  views.py
apps/portfolio/: admin.py  apps.py  forms.py  urls.py  (+2 more)
config/: celery.py  urls.py
docs/: ADR-0001-architecture-freeze.md  PRODUCTION.md  SECURITY.md  TENANCY.md
templates/: base.html  home.html
(+165 files in other folders)
